--- a/github_render_surebet_bot/render.yaml
+++ b/github_render_surebet_bot/render.yaml
@@ -4,10 +4,21 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python main.py"
-    autoDeploy: true
+    envVars:
+      - key: TELEGRAM_BOT_TOKEN
+        value: YOUR_BOT_TOKEN
+      - key: TELEGRAM_CHAT_ID
+        value: YOUR_CHAT_ID
     plan: free
+
+  - type: worker
+    name: telegram-listener
+    env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python bot_listener.py"
     envVars:
       - key: TELEGRAM_BOT_TOKEN
         value: 7967768701:AAGbMMmzXm-UUnyp82NV3Ir0pbLkEgfhPjA
       - key: TELEGRAM_CHAT_ID
         value: 7120810623
+    plan: free
