--- a/github_render_surebet_bot/render.yaml
+++ b/github_render_surebet_bot/render.yaml
@@ -6,9 +6,9 @@ services:
     startCommand: "python main.py"
     envVars:
       - key: TELEGRAM_BOT_TOKEN
-        value: YOUR_BOT_TOKEN
+        value: 7967768701:AAGbMMmzXm-UUnyp82NV3Ir0pbLkEgfhPjA
       - key: TELEGRAM_CHAT_ID
-        value: YOUR_CHAT_ID
+        value: 7120810623
     plan: free
 
   - type: worker
